--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@angular/compiler": "~11.2.8",
     "@angular/core": "~11.2.8",
     "@angular/forms": "~11.2.8",
+    "@angular/localize": "~11.2.8",
     "@angular/platform-browser": "~11.2.8",
     "@angular/platform-browser-dynamic": "~11.2.8",
     "@angular/router": "~11.2.8",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.21",
     "rxjs": "~6.6.0",
